hands-on-tasks/Network-Policy-to-Control-Traffic/busybox-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-frontend
  namespace: frontend
  labels:
    app: busybox
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
