hands-on-tasks/Network-Policy-to-Control-Traffic/nginx-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-backend
  namespace: backend
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
