hands-on-tasks/Network-Policy-to-Control-Traffic/nginx-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-backend
  namespace: backend
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
